--- a/index.html
+++ b/index.html
@@ -4,30 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>后台主页</title>
+    <!-- 导入layui样式表 -->
     <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
-    <link rel="stylesheet" href="/assets/fonts/iconfont.css">
-    <link rel="stylesheet" href="/assets/css/index.css">
-
+    <!-- 导入自己的index样式 -->
+    <link rel="stylesheet" href="/assets/css/index.css" />
+    <!-- 导入字体样式 -->
+    <link rel="stylesheet" href="assets/fonts/iconfont.css" />
 </head>
 
 <body class="layui-layout-body">
     <div class="layui-layout layui-layout-admin">
         <div class="layui-header">
-            <div class="layui-logo"><img src="/assets/images/logo.png" alt=""></div>
+            <div class="layui-logo"><img src="/assets/images/logo.png" alt="" /></div>
             <!-- 头部区域（可配合layui已有的水平导航） -->
             <ul class="layui-nav layui-layout-right">
                 <li class="layui-nav-item">
-                    <a href="javascript:;">
-                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img"><span class="iconfont icon-user"></span>个人中心
+                    <!-- 顶部头像 -->
+                    <a href="javascript:;" class="userinfo">
+                        <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> <span class="text-avatar">A</span>个人中心
                     </a>
                     <dl class="layui-nav-child">
-                        <dd><a href="">基本资料</a></dd>
-                        <dd><a href="">更换头像</a></dd>
-                        <dd><a href="">重置密码</a></dd>
+                        <dd><a href="/user/user_info.html" target="fm">基本资料</a></dd>
+                        <dd><a href="/user/user_avatar.html" target="fm">更换头像</a></dd>
+                        <dd><a href="/user/user_pwd.html" target="fm">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout"><span class="iconfont icon-tuichu"></span>退出</a></li>
+                <li class="layui-nav-item">
+                    <a href="javascript:;" id="btnLogout">
+                        <span class="iconfont icon-tuichu"></span> 退出
+                    </a>
+                </li>
             </ul>
         </div>
 
@@ -41,24 +48,23 @@
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-filter="test" lay-shrink="all">
-                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home"></span>首页</a></li>
+                    <li class="layui-nav-item layui-this"><a href="/home/dashboard.html" target="fm"><span class="iconfont icon-home"></span> 首页</a></li>
                     <li class="layui-nav-item">
-                        <a href="javascript:;"><span class="iconfont icon-16"></span>文章管理</a>
+                        <a href="javascript:;"><span class="iconfont icon-16"></span> 文章管理</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章类别</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>文章列表</a></dd>
-                            <dd><a href="javascript:;"><i class="layui-icon layui-icon-app"></i>发表文章</a></dd>
+                            <dd><a href="/article/art_cate.html" target="fm"><span class="layui-icon layui-icon-app"></span>文章类别</a></dd>
+                            <dd><a id="art_list" href="/article/art_list.html" target="fm"><span class="layui-icon layui-icon-app"></span>文章列表</a></dd>
+                            <dd><a href="/article/art_pub.html" target="fm"><span class="layui-icon layui-icon-app"></span>发布文章</a></dd>
                         </dl>
                     </li>
                     <li class="layui-nav-item">
                         <a href="javascript:;"><span class="iconfont icon-user"></span>个人中心</a>
                         <dl class="layui-nav-child">
-                            <dd><a href="/user/user_info.html" target="fm"><i class="layui-icon layui-icon-app"></i>基本资料</a></dd>
-                            <dd><a href="user/user_avatar.html" target="fm"><i class="layui-icon layui-icon-app"></i>更换头像</a></dd>
-                            <dd><a href="/user/user_pwd.html" target="fm"><i class="layui-icon layui-icon-app"></i>重置密码</a></dd>
+                            <dd><a href="/user/user_info.html" target="fm"><span class="layui-icon layui-icon-app"></span>基本资料</a></dd>
+                            <dd><a href="/user/user_avatar.html" target="fm"><span class="layui-icon layui-icon-app"></span>更换头像</a></dd>
+                            <dd><a href="/user/user_pwd.html" target="fm"><span class="layui-icon layui-icon-app"></span>修改密码</a></dd>
                         </dl>
                     </li>
-
                 </ul>
             </div>
         </div>
@@ -70,14 +76,17 @@
 
         <div class="layui-footer">
             <!-- 底部固定区域 -->
-            © www.itheima.com - 黑马程序员
+            © www.itheima - 黑马程序员
         </div>
     </div>
+    <!-- 引入layui的js文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <!-- 引入jQuery -->
     <script src="/assets/lib/jquery.js"></script>
+    <!-- 引入beseAPI -->
     <script src="/assets/js/baseAPI.js"></script>
+    <!-- 引入本页面的js -->
     <script src="/assets/js/index.js"></script>
-
 </body>
 
 </html>
